Minor tweaks, refactor javascript, tax note, inline documentation

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <label for="total">Total: $</label>
           <input type="text" name="totalAmt" id="total" placeholder="0.00" disabled>
         </div>
+        <small>NOTE: Tax Rates based on <a id="noteLink" href="https://comptroller.texas.gov/">Texas Comptroller of Public Accounts</a>.</small>
       </fieldset>
     </div>
   </main>
