--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
       </fieldset>
     </div>
   </main>
+  <footer>
+    <p>Copyright &copy; 2018 AIM JS Lodging LLC, All Rights Reserved</p>
+  </footer>
   <script src="app.js"></script>
 </body>
 
